public/container/style.css
body .container{margin-top:-1em;position:relative;font-size:.8em;padding-left:0;}
body .container .content-container{padding:3px}
body .container a.hover{display:block;border-right:1px solid transparent;border-left:1px solid transparent;-webkit-transition-property:color,border-color;-moz-transition-property:color,border-color;-o-transition-property:color,border-color;-webkit-transition-duration:.25s,.25s,.25s;-moz-transition-duration:.25s,.25s;-o-transition-duration:.25s,.25s;-webkit-transition-duration:linear,linear,linear;-moz-transition-duration:linear,linear;-o-transition-duration:linear,linear;}
body .container a.hover h1,body .container a.hover h2,body .container a.hover h3,body .container a.hover h4,body .container a.hover h5,body .container a.hover p{-webkit-transition:color .25s linear;-moz-transition:color .25s linear;-o-transition:color .25s linear;transition:color .25s linear;color:#000}
body .container a.hover p{color:#444;line-height:1.4em}
body .container a.hover:hover{color:#36c;border-right-color:#4d90f0}
body .container a.hover.highlight-left:hover{border-right-color:transparent;border-left-color:#4d90f0}
body .container a.hover:hover h1,body .container a.hover:hover h2,body .container a.hover:hover h3,body .container a.hover:hover h4,body .container a.hover:hover h5{color:#36c}
body .container a.hover p.author{font-family:"Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif;font-size:.7em;padding-top:2px;text-transform:uppercase}
body .rounded{padding:5px 3px 7px 3px;}
body .rounded a.hover.highlight-right{margin-right:-6px}
body .rounded a.hover.highlight-left{margin-left:-6px}
body .rounded-hover{padding:3px 2px}
body .image-container .container img{-webkit-border-radius:5px;-moz-border-radius:5px;-o-border-radius:5px;-khtml-border-radius:5px;border-top-left-radius:5px 5px;border-top-right-radius:5px 5px;border-bottom-right-radius:5px 5px;border-bottom-left-radius:5px 5px;display:block}
body .image-container .container .content-container{padding:0}
body .twitter .container .text h3{margin-bottom:3px}
body .twitter .container .text p{font-size:.8em;line-height:1.2em;padding-left:1.25em}
body .twitter .container img{padding-left:3px;margin-left:3px;float:right;width:67px;height:67px}
body .rounded,body .rounded-hover{-webkit-border-radius:5px;-moz-border-radius:5px;-o-border-radius:5px;-khtml-border-radius:5px;border-top-left-radius:5px 5px;border-top-right-radius:5px 5px;border-bottom-right-radius:5px 5px;border-bottom-left-radius:5px 5px;-webkit-box-shadow:rgba(0,0,0,0.398438) 0 1px 3px;-moz-box-shadow:rgba(0,0,0,0.398438) 0 1px 3px;box-shadow:rgba(0,0,0,0.398438) 0 1px 3px;background-color:#fff;background:-webkit-gradient(linear,left bottom,left top,color-stop(0,whiteSmoke),color-stop(.33,#fff));background:-moz-linear-gradient(center bottom,whiteSmoke 0%,#fff 33%);float:right}
body a.rounded-hover{border-left:1px solid transparent;border-right:1px solid transparent;}
body a.rounded-hover img{opacity:.8;-webkit-transition:opacity .25s linear;-moz-transition:opacity .25s linear;-o-transition:opacity .25s linear;transition:opacity .25s linear}
body a.rounded-hover h3{-webkit-transition:color .25s linear;-moz-transition:color .25s linear;-o-transition:color .25s linear;transition:color .25s linear}
body a.rounded-hover :hover img{opacity:1}
body a.rounded-hover :hover h3{color:#39c}
body a.list-story{color:#000;display:block;padding:4px 0 4px 2px}
body a.list-story.first{padding-top:2px}
body a.list-story.last{padding-bottom:2px}
body a.hover:hover{color:#36c;border-bottom-color:#4d90f0}
body .vertical-container{font-size:1em;writing-mode:tb-rl;filter:flipv fliph;-webkit-transform:rotate(-90deg);-moz-transform:rotate(-90deg);-o-transform:rotate(-90deg);white-space:nowrap;display:block;float:left;-webkit-transform-origin-x:0;-webkit-transform-origin-y:100%;-moz-transform-origin:0 100%;position:relative;left:1px;}
body .vertical-container .vertical{font-size:.9em;color:#999;letter-spacing:1px;text-shadow:0 1px 1px #fff;text-transform:uppercase}
body .most-popular ol li{list-style:decimal outside}
body .most-popular ol li h2{margin-left:-7px}
body .most-popular ol{margin-left:20px;font-family:Georgia,"Century Schoolbook","Times New Roman",Times,serif}

